--- a/new.html
+++ b/new.html
@@ -30,13 +30,13 @@
   }
 ]'></textarea><br><br>
 
-        <button id="saveBtn">保存</button>
+        <button id="saveBtn" class="button">保存</button>
         <p id="statusMsg"></p>
     </div>
     <footer class="site-footer">
         <p>&copy; 2025 cyorinkairyutai</p>
-      </footer>
-      
+    </footer>
+
     <script>
         document.getElementById('saveBtn').addEventListener('click', () => {
             const listName = document.getElementById('listName').value.trim();
